# pylsp-mypy

./: .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
pylsp_mypy/: plugin.py
test/: test_plugin.py
