[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylsp-mypy"
description = "Mypy linter for the Python LSP Server"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Richard Kellnberger" },
    { name = "Tom van Ommeren" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = [
    "python-lsp-server >= 1.13.1",
    "mypy >= 1.11",
]

[project.urls]
Homepage = "https://github.com/python-lsp/pylsp-mypy"

[project.entry-points.pylsp]
pylsp_mypy = "pylsp_mypy.plugin"

[project.optional-dependencies]
test = [
    "tox",
    "pytest",
    "pytest-cov",
    "coverage",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "coverage",
    "ruff",
    "rstcheck",
]

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "test"]

[tool.setuptools.package-data]
pylsp_mypy = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "pylsp_mypy._version.__version__" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C90", # mccabe
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = "pylsp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pylsp_mypy.plugin"
disallow_untyped_decorators = false
